--- a/src/components/auth-modal/AuthModal.css
+++ b/src/components/auth-modal/AuthModal.css
@@ -158,6 +158,20 @@
   box-shadow: inset 0 0 0 1px var(--brand-warning);
 }
 
+.phone-field.error .phone-country {
+  border-color: var(--brand-warning);
+  box-shadow: inset 0 0 0 1px var(--brand-warning);
+}
+
+.phone-country {
+  height: 44px;
+  box-sizing: border-box;
+}
+
+.phone-country {
+  transition: box-shadow 0.15s ease, border-color 0.15s ease;
+}
+
 .form-field {
   display: flex;
   flex-direction: column;
@@ -222,6 +236,11 @@
 
 .auth-submit:hover:not(:disabled) {
   background: var(--brand-primary-hover);
+}
+
+.auth-login-actions .auth-forgot:first-child {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .auth-submit:disabled {
@@ -471,6 +490,11 @@
   display: flex;
   flex-direction: column;
   gap: 0px;
+}
+
+.auth-link--no-gap {
+  margin-top: 5px;
+  padding: 0;
 }
 
 @media (max-width: 480px) {
